# irpp_study_to_ctpskills_authorpackage

./: .gitignore  AGENTS.md  DECISIONS.md  HANDOFF.md  README.md  TARGET_SPEC.md  VALIDATION.md  assessment_notes_content.md  assessment_notes_matrix.md  curated_rationales_scenarios.md  pyproject.toml  run_all.py
archive/: NOTES_TRACKER.md
archive/J_per_domain_layout/: J_skills_gap_table.per-domain.html  README.md
archive/v1_review_portal/: README.md
data/: PROVENANCE.md
data/reference/: ai_exposure_complementarity_dais.csv  author_viable_selections_noc.csv  community_occupations.csv  community_tooltips.json  cops_summary_2024_2033.csv  noc2_custom_labels.json  noc_teer_lookup.csv  source_sector_mapping.json  susceptible_sector_nocs.json  viable_selections.csv
figure_data/: EMBED_CODES.md  FACTCHECK_cosine.md  FACTCHECK_euclidean.md  FACTCHECK_shared.md  FIGURE_CONFIGS.md  HANDOFF_POLISH.md  HANDOFF_portal.md  PRINT_SIZING.md  README.md  export.mjs  gen_B2_suitable_heatmap.py  gen_B_suitable_heatmap.py  gen_D_walkthrough.py  gen_E2_viable_table.py  gen_E_viable_table.py  gen_F2_filtering.py  gen_I_skills_gap_bars.py  gen_J_skills_gap_table.py  gen_K_appendix_screening.py  generate_all.py  lib.py  serve.sh
figure_data/archive/: HANDOFF_POLISH.md
figure_data/theme/: COLOUR_BRIEF.md  (+4 more)
pipeline/: 01_similarity.py  02_suitable.py  03_census.py  04_enrich.py  05_viable.py  06_skill_gaps.py
validation/: I_zero_gap_pairs.csv  check_I_zero_gaps.py  check_token_coverage.py  regen_manifest_2026-07-15.txt  token_coverage_2026-07-15.txt  token_coverage_2026-07-16.txt
(+18 files in other folders)
